--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -5,6 +5,10 @@ html, body {
   position: relative;
   height: 100%;
   width: 100%;
+  background: #252323;
+  -webkit-font-smoothing: antialiased;
+  font-weight: 400;
+  color: #2c2d30;
 }
 
 *, *:before, *:after {
