--- a/stylesheets/gallery.css
+++ b/stylesheets/gallery.css
@@ -9,6 +9,22 @@
   position: relative;
 }
 
+#gallery-load-more {
+  color: #6ecadc;
+  font-size: 20px;
+  margin-top: 40px;
+  margin-bottom: 200px;
+  font-weight: 600;
+  text-align: center;
+  cursor: pointer;
+  opacity: 0.7;
+  transition: 0.3s ease;
+}
+
+#gallery-load-more:hover {
+  opacity: 1
+}
+
 #photo-gallery-header h3 {
   color: #6ecadc;
 }
