--- a/stylesheets/grid.css
+++ b/stylesheets/grid.css
@@ -26,6 +26,7 @@
 
 .grid-photo:hover img {
   -webkit-filter: grayscale(0%);
+  filter: grayscale(0%);
   transform: scale(1.05);
 }
 
@@ -35,6 +36,7 @@
   display: block;
   transition: 0.3s cubic-bezier(0.7, 0, 0.3, 1);
   -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
 }
 
 .grid-photo.active {
