--- a/stylesheets/gallery.css
+++ b/stylesheets/gallery.css
@@ -13,7 +13,7 @@
   color: #6ecadc;
   font-size: 20px;
   margin-top: 40px;
-  margin-bottom: 80px;
+  padding-bottom: 80px;
   font-weight: 600;
   text-align: center;
   cursor: pointer;
