--- a/stylesheets/gallery.css
+++ b/stylesheets/gallery.css
@@ -19,6 +19,9 @@
   cursor: pointer;
   opacity: 0.7;
   transition: 0.3s ease;
+  -webkit-transform: translate3d(0, 0, 0);
+  -webkit-backface-visibility: hidden;
+  -webkit-perspective: 1000;
 }
 
 #gallery-load-more:hover {
