--- a/stylesheets/grid.css
+++ b/stylesheets/grid.css
@@ -23,6 +23,9 @@
   background-color: black;
   cursor: pointer;
   transition: 0.3s cubic-bezier(0.7, 0, 0.3, 1);
+  -webkit-transform: translate3d(0, 0, 0);
+  -webkit-backface-visibility: hidden;
+  -webkit-perspective: 1000;
 }
 
 .grid-photo:hover img {
@@ -39,6 +42,9 @@
   transition: 0.3s cubic-bezier(0.7, 0, 0.3, 1);
   -webkit-filter: grayscale(100%);
   filter: grayscale(100%);
+  -webkit-transform: translate3d(0, 0, 0);
+  -webkit-backface-visibility: hidden;
+  -webkit-perspective: 1000;
 }
 
 .grid-photo.active {
