--- a/stylesheets/lighthouse.css
+++ b/stylesheets/lighthouse.css
@@ -9,6 +9,9 @@
   display: none;
   opacity: 0;
   transition: 0.5s cubic-bezier(0.7, 0, 0.3, 1);
+  -webkit-transform: translate3d(0, 0, 0);
+  -webkit-backface-visibility: hidden;
+  -webkit-perspective: 1000;
 }
 
 #photo-lighthouse.active {
@@ -34,6 +37,9 @@
   display: none;
   opacity: 0;
   transition: 0.3s cubic-bezier(0.7, 0, 0.3, 1);
+  -webkit-transform: translate3d(0, 0, 0);
+  -webkit-backface-visibility: hidden;
+  -webkit-perspective: 1000;
 }
 
 #photo-lighthouse-overlay.active {
@@ -52,6 +58,9 @@
   transition: 0.3s cubic-bezier(0.7, 0, 0.3, 1);
   -webkit-transform: translate(0px, 10px);
           transform: translate(0px, 10px);
+  -webkit-transform: translate3d(0, 0, 0);
+  -webkit-backface-visibility: hidden;
+  -webkit-perspective: 1000;
 }
 
 #photo-lighthouse.active #photo-lighthouse-display-text {
@@ -90,6 +99,9 @@
   width: 20px;
   opacity: 0.5;
   transition: 0.3s ease;
+  -webkit-transform: translate3d(0, 0, 0);
+  -webkit-backface-visibility: hidden;
+  -webkit-perspective: 1000;
 }
 
 #photo-lighthouse-close {
