--- a/stylesheets/gallery.css
+++ b/stylesheets/gallery.css
@@ -1,3 +1,6 @@
+
+/* Style for Gallery */
+
 #photo-gallery-header {
   text-align: center;
   color: white;
@@ -19,9 +22,6 @@
   cursor: pointer;
   opacity: 0.7;
   transition: 0.3s ease;
-  -webkit-transform: translate3d(0, 0, 0);
-  -webkit-backface-visibility: hidden;
-  -webkit-perspective: 1000;
 }
 
 #gallery-load-more:hover {
